# Nexel

./: .gitignore  Cargo.toml  build.sh  certificate.crt  private.key  readme.md  rule.yaml
src/: configuration.rs  connection.rs  env.rs  error.rs  lib.rs  main.rs  protocol.rs  rule.rs  tls.rs
src/protocol/: mod.rs  v4.rs  v5.rs
