[package]
name = "socks-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.6.1"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
