[package]
name = "socks-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.6.1"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2.1.3"
tokio-rustls = "0.26.0"
reqwest = { version = "0.12.7", features = ["json"]}
serde = { version = "1.0.209", features = ["derive"] }
lazy_static = "1.5.0"
url = "2.5.2"
